gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gateway
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers: 
      - name: gateway
        image: myrachanto/gataway:v-2
        ports:
        - containerPort: 2300
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 2300
      targetPort: 2300
      nodePort: 30100
