task1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task1-deployment
  # namespace: ingress-nginx
  labels:
    app: task1
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: task1
  template:
    metadata:
      labels:
        app: task1
    spec:
      containers: 
      - name: task1
        image: myrachanto/task1:v-2
        ports:
        - containerPort: 2100
---
apiVersion: v1
kind: Service
metadata:
  name: task1
  # namespace: ingress-nginx
spec:
  selector:
    app: task1
  type: ClusterIP
  ports:
    - name: http
      port: 2100
      targetPort: 2100
