task2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task2-deployment
  # namespace: ingress-nginx
  labels:
    app: task2
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: task2
  template:
    metadata:
      labels:
        app: task2
    spec:
      containers: 
      - name: task2
        image: myrachanto/task2:v-2
        ports:
        - containerPort: 2200
---
apiVersion: v1
kind: Service
metadata:
  name: task2
  # namespace: ingress-nginx
spec:
  selector:
    app: task2
  type: ClusterIP
  ports:
    - name: http
      port: 2200
      targetPort: 2200
